# AlgebraicOptimization.py

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: julia_ci.yml
algebraic_optimization/: __init__.py
algebraic_optimization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
algebraic_optimization/compositional_programming/: open_flow_graphs.py  optimizers.py
algebraic_optimization_py/: __init__.py
algebraic_optimization_py/compositional_programming/: __init__.py  finset_algebras.py  objectives.py  open_flow_graphs.py  optimizers.py
examples/: composite_optimization.py  julia_readme_python_attempt.py
src/algebraic_optimization/: __init__.py
src/algebraic_optimization/compositional_programming/: README.md  __init__.py  fin_functions.py  objectives.py  open_flow_graphs.py  optimizers.py
test/: julia_compose.jl  test_compare_julia.py  test_open.py
