[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algebraic_optimization"
version = "0.1.0"
description = "Python implementation of Algebraic Optimization"
authors = [{name = "Algebraic Optimization Team"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "networkx>=2.6.0",
    "sympy>=1.9"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["algebraic_optimization*"]

[tool.black]
line-length = 88
include = '\.pyi?$'

[flake8]
max-line-length = 88
extend-ignore = "E203, W503"
